WebCore/rendering/RenderSVGContainer.h
@@ -39,8 +39,8 @@ public:
     RenderObjectChildList* children() { return &m_children; }
 
     // <marker> uses these methods to only allow drawing children during a special marker draw time
-    void setDrawsContents(bool);
-    bool drawsContents() const;
+    void setDrawsContents(bool drawsContents) { m_drawsContents = drawsContents; }
+    bool drawsContents() const { return m_drawsContents; }
 
     virtual void paint(PaintInfo&, int parentX, int parentY);
 
@@ -97,5 +97,3 @@ void toRenderSVGContainer(const RenderSVGContainer*);
 
 #endif // ENABLE(SVG)
 #endif // RenderSVGContainer_h
-
-// vim:ts=4:noet
